cabal-version:       >=1.10

name:                ghc-musl-test-dep
version:             0.1.0.0
license-file:        LICENSE
author:              Utku Demir
maintainer:          me@utdemir.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     GhcMuslTestDep
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
